--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -4,6 +4,94 @@ body {
     height: 100%;
 }
 
+/* synaptron */
+.synaptron {
+    top: -100px;
+    transition: background-color 0.3s ease;
+}
+
+.synaptron-chat.shown {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(0, 0, 0);
+    transition: background-color 0.3s ease;
+    z-index: 9999;
+}
+
+.syn-close {
+    margin-left: 10px;
+}
+
+.syn-searchbar{
+    width: 50%;
+    height: 30px;
+    border-radius: 4px;
+    color: black;
+    background-color: black;
+    border: 1px solid rgba(119, 136, 153, 0.692);
+    transition: 0.1s ease;
+}
+
+input:focus{
+    outline: none;
+}
+
+.syn-searchbar:focus{
+    border-color: lightgray;
+}
+
+.syn-searchbar.contract{
+    width: 47%;
+}
+
+.synsb-div {
+    display: flex;
+    justify-content: center;
+    margin-right: 495px;
+    margin-left: 170px;
+    flex-direction: column;
+    color: lightgray;
+    align-items: center;
+    gap: 4px;
+}
+
+.synsb-below{
+    font-size: smaller;
+}
+
+.synaptron-chat-content{
+    display: flex;
+    flex-direction: column;
+    gap: 80vh;
+}
+
+.logo-syn{
+    font-size: 100px;
+    margin-top: 10px;
+    margin-left: 550px;
+    margin-right: 950px;
+    align-items: center;
+    height: 60px;
+    width: 100px;
+    align-items: center;
+    border-radius: 4px;
+    box-shadow: 0px 10px 15px -5px lightslategray;
+}
+
+.syn-div{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
 header{
     width: 100%;
     position: fixed;
@@ -81,7 +169,7 @@ button{
     padding-top: 15px;
     padding-right: 10px;
     padding-left: 10px;
-    gap: 58vh;
+    gap: 50vh;
 }
 
 .nav-up-links{
