--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,7 +2,21 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    /* font-family:Georgia, 'Times New Roman', Times, serif; */
 }
+*::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: black;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: lightslategrey;
+    border-radius: 8px;
+    border: 3px solid black;
+  }
 
 /* synaptron */
 .synaptron {
@@ -24,6 +38,7 @@ body {
     background-color: rgb(0, 0, 0);
     transition: background-color 0.3s ease;
     z-index: 9999;
+    overflow: scroll;
 }
 
 .syn-close {
@@ -31,13 +46,15 @@ body {
 }
 
 .syn-searchbar{
-    width: 50%;
-    height: 30px;
+    width: 105vh;
+    height: 40px;
     border-radius: 4px;
     color: black;
     background-color: black;
     border: 1px solid rgba(119, 136, 153, 0.692);
     transition: 0.1s ease;
+    margin-top: 0;
+    color: lightgray;
 }
 
 input:focus{
@@ -48,42 +65,61 @@ input:focus{
     border-color: lightgray;
 }
 
-.syn-searchbar.contract{
-    width: 47%;
-}
-
 .synsb-div {
     display: flex;
+    position: fixed;
     justify-content: center;
-    margin-right: 495px;
-    margin-left: 170px;
+    align-items: center;
     flex-direction: column;
     color: lightgray;
     align-items: center;
     gap: 4px;
+    margin-top: 89vh;
+    background-color: black;
+    border: 3px solid black;
+    margin-bottom: 10px;
 }
 
 .synsb-below{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: smaller;
+}
+
+.syn-content{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 50%;
+    color: lightgray;
+    margin-top: 5px;
+    margin-bottom: 70px;
 }
 
 .synaptron-chat-content{
     display: flex;
     flex-direction: column;
-    gap: 80vh;
+    justify-content: space-between;
+    align-items: center;
+    color: lightgray;
 }
 
 .logo-syn{
+    /* position:absolute; */
     font-size: 100px;
     margin-top: 10px;
     margin-left: 550px;
-    margin-right: 950px;
+    margin-right: 612px;
     align-items: center;
     height: 60px;
     width: 100px;
     align-items: center;
     border-radius: 4px;
     box-shadow: 0px 10px 15px -5px lightslategray;
+    margin-bottom: 15px;
 }
 
 .syn-div{
