Login done [server -> Modified: Middleware for more security (id case)], [client -> modified layout to wrap with TokenProvider(AuthContext), done login functionality, profile page for each user]

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -55,6 +55,12 @@ body {
     transition: 0.1s ease;
     margin-top: 0;
     color: lightgray;
+    padding-left: 10px;
+}
+
+input{
+    padding: 2px;
+    margin-left: 5px;
 }
 
 input:focus{
