--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -286,7 +286,24 @@ button{
 .home-pg, .profile-pg, .groups-pg, .tasks-pg{
     display: flex;
     padding-top: 200px;
-    margin-left: 300px;
+    margin-left: 250px;
+}
+
+/* Profile Page, Tasks Page */
+
+.user-details, .task-details{
+    color:#1b1420;
+    width: 80%;
+    height: 50%;
+    padding: 20px;
+    gap: 30px;
+}
+
+/* Profile Page */
+
+.user-details{
+    border-radius: 4px;
+    border: 2px solid rgba(119, 114, 114, 0.37);
 }
 
 /* Login page */
