--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -285,13 +285,13 @@ button{
 
 .home-pg, .profile-pg, .groups-pg, .tasks-pg{
     display: flex;
-    padding-top: 200px;
-    margin-left: 250px;
+    padding-top: 100px;
+    margin-left: 200px;
 }
 
 /* Profile Page, Tasks Page */
 
-.user-details, .task-details{
+.user-details, .task-details, .group-details{
     color:#1b1420;
     width: 80%;
     height: 50%;
@@ -299,11 +299,57 @@ button{
     gap: 30px;
 }
 
-/* Profile Page */
-
-.user-details{
+.user-div, .tasks-div{
     border-radius: 4px;
     border: 2px solid rgba(119, 114, 114, 0.37);
+}
+
+.pg-heading{
+    color: #1b1420;
+}
+
+/* Profile Page */
+
+.user-div{
+    padding: 20px;
+}
+
+.pg-head{
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+}
+
+/* Tasks Page */
+
+.tasks-div{
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+/* Update Form */
+
+.updateForm-pg{
+    padding-top: 0;
+    height: 100%;
+}
+
+.update-form{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #3c2468b2;
+    gap: 20px;
+    padding: 50px;
+    width: 250px;
+    border-radius: 4px;
+    margin-right: 50px;
+}
+
+.update-form-pg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Login page */
