--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -481,21 +481,41 @@ button{
     border-radius: 4px;
 }
 
+.date-input{
+    background-color: transparent;
+    width: 160px;
+    color: white;
+}
+
 .account-delete-form{
     border-color: rgb(228, 54, 54);
 }
 
 .general-form-input{
-    border: 2px solid silver;
+    border: 2px solid grey;
     padding: 8px;
     height: 16px;
     border-radius: 4px;
     transition: 0.2s ease;
+    background-color: transparent;
+    color: white;
 }
 
 .general-form-input:focus {
     outline: none;
-    border-color: rgb(129, 129, 129);
+    border-color: white;
+}
+
+::placeholder{
+    color: silver;
+}
+
+.general-form-input-range-div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    font-weight: bold;
 }
 
 .general-form-btns-div{
